--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     "require-dev": {        
     },
     "autoload": {
-        "psr-0": {
-            "" : "src/"
+        "psr-4": {
+            "dejvidecz\\google\\maps\\": "src"
         }
     }
 }
